testing/tests/src/test/resources/golden/CoreBindingsFailureTest/manual-framework-type-usage.golden.txt
error: Framework types (Lazy, Provider, Optional) can't be manually managed (provided/bound)
Encountered:
  in graph for root-component test.RootComponent
  in entry-point getO3(): com.yandex.yatagan.Optional<com.yandex.yatagan.Lazy<com.yandex.yatagan.Optional<test.WithInject
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: Missing binding for com.yandex.yatagan.Optional<test.WithInject>
NOTE: `com.yandex.yatagan.Optional<test.WithInject>` can't be requested in any way (lazy/provider/optional) but directly
Encountered:
  in graph for root-component test.RootComponent
  in entry-point getO3: [OptionalLazy] com.yandex.yatagan.Optional<test.WithInject>
                        ^-[*1]-----------------------------------------------------
  here: [1*] <missing>
             ^~~~~~~~~